# NIFTY

./: .gitignore  BD_NIRCam_MIRI_filters.json  BD_NIRCam_MIRI_filters.txt  LICENSE  NIFTY.py  README.md  create_ATMO2020_interpolator.py  create_LOWZ_interpolator.py  create_NIFTY_interpolator.py  create_SonoraElfOwl_interpolator.py  environment.yml  pyproject.toml
.github/workflows/: publish.yml
src/nifty/: __init__.py  build_model.py  load.py  model.py  plot.py  prob.py  sample.py
src/nifty/cli/: __init__.py  build_model.py  nifty.py  print.py
