[project]
name = "nifty"
version = "1.0.0"
description = "Near-Infrared Fitting for T and Y Dwarfs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "astro-sedpy>=0.4.1",
  "corner>=2.2.3",
  "emcee>=3.1.6",
  "fitsio>=1.4.0",
  "h5netcdf>=1.8.1",
  "h5py>=3.16",
  "matplotlib>=3.10",
  "nautilus-sampler>=1.0.6",
  "numpy>=2.4",
  "pandas>=3.0.3",
  "scipy>=1.17",
  "tqdm>=4.67",
  "xarray>=2026.4",
]

[project.scripts]
nifty = "nifty.cli.nifty:main"
build_model = "nifty.cli.build_model:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"
