[project]
name = "astro-nifty"
description = "Near-Infrared Fitting for T and Y Dwarfs"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
  "corner>=2.2.3",
  "emcee>=3.1.6",
  "fitsio>=1.4.0",
  "h5py>=3.16",
  "matplotlib>=3.10",
  "nautilus-sampler>=1.0.6",
  "numpy>=2.4",
  "pandas>=3.0.3",
  "scipy>=1.17",
  "tqdm>=4.67",
]

[project.optional-dependencies]
build-model = [
    "astro-sedpy>=0.4.1",
    "h5netcdf>=1.8.1",
    "xarray>=2026.4",
]

[project.scripts]
nifty = "nifty.cli.nifty:main"
build_model = "nifty.cli.build_model:main"

[project.urls]
Repository = "https://github.com/kevinhainline/NIFTY"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nifty"]


[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/nifty/_version.py"
